build.log
   Compiling trinitychain v0.1.0 (/data/data/com.termux/files/home/trinitychain)
warning: unused import: `mine_block`
 --> src/bin/trinity-miner.rs:7:27
  |
7 | use trinitychain::miner::{mine_block, mine_block_parallel};
  |                           ^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

error[E0061]: this function takes 1 argument but 3 arguments were supplied
   --> src/bin/trinity-miner.rs:181:13
    |
181 |               mine_block_parallel(new_block.clone(), threads, Some(Box::new(move |count| {
    |  _____________^^^^^^^^^^^^^^^^^^^____________________-------__-
    | |                                                    |
    | |                                                    unexpected argument #2 of type `usize`
182 | |                 if count % 10000 == 0 {
183 | |                     let elapsed = mine_start.elapsed().as_secs_f64();
184 | |                     let hashrate = if elapsed > 0.0 { count as f64 / elapsed } else { 0.0 };
...   |
187 | |             })))
    | |_______________- unexpected argument #3 of type `Option<Box<{closure@src/bin/trinity-miner.rs:181:75: 181:87}>>`
    |
note: function defined here
   --> /data/data/com.termux/files/home/trinitychain/src/miner.rs:66:8
    |
 66 | pub fn mine_block_parallel(block: Block) -> Result<Block, ChainError> {
    |        ^^^^^^^^^^^^^^^^^^^
help: remove the extra arguments
    |
181 -             mine_block_parallel(new_block.clone(), threads, Some(Box::new(move |count| {
181 +             mine_block_parallel(new_block.clone())
    |

error[E0308]: `if` and `else` have incompatible types
   --> src/bin/trinity-miner.rs:205:13
    |
180 |            let (mined_block, hash_count) = if threads > 1 {
    |  __________________________________________-
181 | |/             mine_block_parallel(new_block.clone(), threads, Some(Box::new(move |count| {
182 | ||                 if count % 10000 == 0 {
183 | ||                     let elapsed = mine_start.elapsed().as_secs_f64();
184 | ||                     let hashrate = if elapsed > 0.0 { count as f64 / elapsed } else { 0.0 };
...   ||
187 | ||             })))
    | ||________________- expected because of this
...   |
205 | |              (new_block, hash_count)
    | |              ^^^^^^^^^^^^^^^^^^^^^^^ expected `Result<Block, ChainError>`, found `(Block, u64)`
206 | |          };
    | |__________- `if` and `else` have incompatible types
    |
    = note: expected enum `Result<Block, ChainError>`
              found tuple `(Block, u64)`

Some errors have detailed explanations: E0061, E0308.
For more information about an error, try `rustc --explain E0061`.
warning: `trinitychain` (bin "trinity-miner") generated 1 warning
error: could not compile `trinitychain` (bin "trinity-miner") due to 2 previous errors; 1 warning emitted
warning: build failed, waiting for other jobs to finish...
